--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/makeYourTrip?createTableIfNotExists=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
