--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,22 @@
 
-
-
-
-spring.datasource.url=jdbc:mysql://localhost:3306/makeYourTrip?createTableIfNotExists=true
+# DataSource Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/make_your_trip?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=@2409Ashu
+
+# Hibernate Properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+# Spring Security Configuration
+spring.security.user.name=AshU
+spring.security.user.password=@2409Ashu
 
+# Logging Configuration
+logging.level.org.springframework=INFO
+
+# Server Port
+server.port=8080
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
